# Eitan-OS

./: .gitignore  BOOTIA32.EFI  CMakeLists.txt  README.md  build_run.sh  debug.sh  kernel.c  line_counter.sh  linker.ld
fonts/: compile.sh
programs/: boot.S  compile.sh  linker.ld  test.S
programs/shell/: c.c  linker.ld
programs/test/: linker.ld
runConfig/: Build & Run.run.xml
src/: VGA_screen.c  VGA_screen.h  allocator.c  allocator.h  eitan_lib.c  eitan_lib.h  filesystem.c  filesystem.h  gdt.c  gdt.h  idt.c  idt.h  interrupts.c  interrupts.h  interrupts_stubs.S  io.c  io.h  isr_stubs.asm  kernel.c  linker.ld  main_asm.S  memory.c  memory.h  panic.c  pmm.c  pmm.h  process_scheduler.c  process_scheduler.h  program_loader.c  program_loader.h  screen.c  screen.h  start.S  stdint.h  vmm.c  vmm.h
src/compiled_fonts/: zap.c  zap.h
src/compiled_programs/: .c  .h  shell.c  shell.h  test.c  test.h
src/memory/: allocator.c  allocator.h  pmm.c  pmm.h  vmm.c  vmm.h
src/process/: interrupts.c  interrupts.h  process_scheduler.c  process_scheduler.h  program_loader.c  program_loader.h
src/util/: io.c  io.h  limine.h  panic.c  panic.h  stdint.h  string.c  string.h  util.c  util.h
